# algorithm-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  DesignDocument.md  README.md  format.sh  run_program.sh
.github/workflows/: c-cpp.yml
assets/: DesignDocument.md  Sketch.fig
include/: algirithm_interface.h  algorithm.h  algorithms.h  buttons.h  edge.h  graph.h  interface.h  node-objects.hpp  node.h  pillar-objects.hpp  pillar.h  raygui.h  searcher.h  sorter.h  trees.h  utils.h
include/interfaces/: blank-interface.hpp  graph-interface.hpp  main-interface.hpp  search-interface.hpp  sorting-interface.hpp  tree-interface.hpp
include/standalone-functions/: graph-algorithms.h  graph-algorithms.hpp  search-algorithms.h  search-algorithms.hpp  sorting-algorithms.h  sorting-algorithms.hpp  trees-algorithms.h  trees-algorithms.hpp
src/: CMakeLists.txt  algorithm.cpp  algorithms.cpp  buttons.cpp  graph.cpp  interface.cpp  main.cpp  node-objects.cpp  pillar-objects.cpp  pillar.cpp  raygui.cpp  searcher.cpp  sorter.cpp  trees.cpp
src/interfaces/: graph-interface.cpp  main-interface.cpp  search-interface.cpp  sorting-interface.cpp  tree-interface.cpp
src/standalone-functions/: graph-algorithms.cpp  search-algorithms.cpp  sorting-algorithms.cpp
src/tests/: CMakeLists.txt  example_test.cpp
tests/: CMakeLists.txt  example_test.cpp
